--- a/index.html
+++ b/index.html
@@ -3,47 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
+
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!--<style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style>-->
 </head>
 <body>
-
   <!-- Rating state start -->
-
+  <div id="main-contenair">
+    <div id="first-part">
+      <div id="star">
+    <img src="images\icon-star.svg" alt="">
+  </div>
+    <h2>
   How did we do?
-
+  </h2>
+  <p>
   Please let us know how we did with your support request. All feedback is appreciated 
   to help us improve our offering!
-
-  1 2 3 4 5
-
+</p>
+<div id="rating">
+  <button value="1" class="rate">1</button>
+  <button value="2" class="rate">2</button>
+  <button value="3" class="rate">3</button>
+  <button value="4" class="rate">4</button>
+  <button value="5" class="rate">5</button>
+</div>
+<button id="btn">
   Submit
-
+</button>
+</div>
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
+  <div id="second-part">
   You selected <!-- Add rating here --> out of 5
 
   Thank you!
 
   We appreciate you taking the time to give a rating. If you ever need more support, 
   don’t hesitate to get in touch!
-
+</div>
+</div>
   <!-- Thank you state end -->
 
   
-  <div class="attribution">
+  <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Your Name Here</a>.-->
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
